--- a/Lesson1.html
+++ b/Lesson1.html
@@ -58,4 +58,192 @@
 		</form>
 	</div>
 </body>
-</html>
+</htm<!DOCTYPE html>
+<html>
+<head>
+	<title>XYZ Service</title>
+	<meta charset="utf-8">
+	<style>
+	 	 *{
+	 	 	margin: 0;
+	 	 	padding: 0;
+	 	 }
+	 	.header-title{
+	 		width: 100%;
+	 		background-color: #008000;
+	 		text-align: center;
+	 		color: #fff;
+	 		font-size: 25px;
+	 		padding: 20px;
+
+	 	}
+	 	.login-box{
+	 		margin-top: 50px;
+	 		text-align: center;
+	 	}
+
+	 	.input-box{
+	 		padding: 10px;
+	 		font-size: 15px;
+	 		border-radius: 5px;
+	 		background-color: #f5f5dc;
+	 		width: 50%;
+	 		margin-bottom: 30px;
+	 		text-align: left;
+	 	}
+
+	 	.login-button{
+	 		width: 30%;
+	 		padding: 10px;
+	 		border-radius: 8px;
+	 		background-color: #008000;
+	 		font-size: 25px;
+	 		text-align: center;
+	 		color: #ffffff;
+	 	}
+
+
+	 	.login-button:hover {
+	 		background-color: #2f4f4f;
+	 	}
+	 </style>
+</head>
+<body>
+	<div class="header-title">XYZ Service</div>
+	<div class="login-box">
+		<form>
+			<input class="input-box" type="text" name="username" placeholder="Username">
+			<p>
+			<input class="input-box" type="password" name="password" placeholder="Password">
+			<p>
+			<input class="login-button" type="submit" value="sign-in">
+		</form>
+	</div>
+	CTYPE html>
+	<html>
+		<head>
+				<title>XYZ Service</title>
+					<meta charset="utf-8">
+						<style>
+	 	 *{
+			 	 	 	margin: 0;
+							 	 	padding: 0;
+										 	 }
+		 	 	.header-title{
+						 		width: 100%;
+									 		background-color: #008000;
+												 		text-align: center;
+															 		color: #fff;
+																		 		font-size: 25px;
+																					 		padding: 20px;
+
+																								 	}
+					 	.login-box{
+								 		margin-top: 50px;
+											 		text-align: center;
+														 	}
+
+							 	.input-box{
+										 		padding: 10px;
+													 		font-size: 15px;
+																 		border-radius: 5px;
+																			 		background-color: #f5f5dc;
+																						 		width: 50%;
+																									 		margin-bottom: 30px;
+																												 		text-align: left;
+																															 	}
+
+									 	.login-button{
+												 		width: 30%;
+															 		padding: 10px;
+																		 		border-radius: 8px;
+																					 		background-color: #008000;
+																								 		font-size: 25px;
+																											 		text-align: center;
+																														 		color: #ffffff;
+																																	 	}
+
+
+											 	.login-button:hover {
+														 		background-color: #2f4f4f;
+																	 	}
+													 </style>
+		</head>
+		<body>
+				<div class="header-title">XYZ Service</div>
+					<div class="login-box">
+								<form>
+												<input class="input-box" type="text" name="username" placeholder="Username">
+															<p>
+																		<input class="input-box" type="password" name="password" placeholder="Password">
+																					<p>
+																								<input class="login-button" type="submit" value="sign-in">
+																										</form>
+																											</div>
+		</body>
+	</html>
+
+	CTYPE html>
+	<html>
+		<head>
+				<title>XYZ Service</title>
+					<meta charset="utf-8">
+						<style>
+	 	 *{
+			 	 	 	margin: 0;
+							 	 	padding: 0;
+										 	 }
+		 	 	.header-title{
+						 		width: 100%;
+									 		background-color: #008000;
+												 		text-align: center;
+															 		color: #fff;
+																		 		font-size: 25px;
+																					 		padding: 20px;
+
+																								 	}
+					 	.login-box{
+								 		margin-top: 50px;
+											 		text-align: center;
+														 	}
+
+							 	.input-box{
+										 		padding: 10px;
+													 		font-size: 15px;
+																 		border-radius: 5px;
+																			 		background-color: #f5f5dc;
+																						 		width: 50%;
+																									 		margin-bottom: 30px;
+																												 		text-align: left;
+																															 	}
+
+									 	.login-button{
+												 		width: 30%;
+															 		padding: 10px;
+																		 		border-radius: 8px;
+																					 		background-color: #008000;
+																								 		font-size: 25px;
+																											 		text-align: center;
+																														 		color: #ffffff;
+																																	 	}
+
+
+											 	.login-button:hover {
+														 		background-color: #2f4f4f;
+																	 	}
+													 </style>
+		</head>
+		<body>
+				<div class="header-title">XYZ Service</div>
+					<div class="login-box">
+								<form>
+												<input class="input-box" type="text" name="username" placeholder="Username">
+															<p>
+																		<input class="input-box" type="password" name="password" placeholder="Password">
+																					<p>
+																								<input class="login-button" type="submit" value="sign-in">
+																										</form>
+																											</div>
+		</body>
+	</html>
+
