--- a/Lesson1.html
+++ b/Lesson1.html
@@ -56,7 +56,7 @@
 			<p>
 			<input class="input-box" type="password" name="password" placeholder="Password">
 			<p>
-			<input class="login-button" type="submit" value="sign-in">
+			<input class="login-button" type="submit" value="Sign-in">
 		</form>
 	</div>
 </body>
